2013-09-02  Richard Biener  <rguenther@suse.de>

PR middle-end/57511
	* tree-scalar-evolution.c (instantiate_scev_name): Allow
	non-linear SCEVs.

	* gcc.dg/tree-ssa/sccp-1.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@202168 138bc75d-0d04-0410-961f-82ee72b054a4